menu.css
/* The navigation bar */
.navbar {
  overflow: hidden;
  background-color: #8f3639;
  position: fixed;
  top: 0;
  width: 100%;
  z-index: 3; 
}
  
/* Links inside the navbar */
.navbar a {
  float: left;
  
  color: #FFEFCB;
  padding: 0.5em 0.5em;
  text-decoration: none;
  font-size: 1em;

}
  
/* Change background on mouse-over */
.navbar a:hover {
  background: #b74d51;
  color: #FFEFCB;
  font-weight: bold;
}

/* removes all the fancy styling from links */
a:link { 
  text-decoration: none; 
} 
a:visited { 
  text-decoration: none; 
} 
a:hover { 
  text-decoration: none; 
} 
a:active { 
  text-decoration: none; 
}

body {
  background-color: #CBA591;
  margin: 0;

}

p {
  font-size: 15px;
  color: hsl(23, 33%, 28%);
  padding-left: 5%;
  max-width:1300px;
  word-wrap:normal;
  margin-left: 1em;
}

h3 {

  text-indent: 20px;
  color: #604230;
  padding-left: 5%;
  max-width:1300px;
  word-wrap:normal;
  margin-left: 1em;

}

h1 {
  text-align: center;
  font-size: 35px;
  color: #604230;

}

h2 {
    text-indent: 20px;
    color: #604230;
    margin-left: 1em;
}



.site-title {
  font-size: 3rem;
  text-align: center;
}

section {
  padding-block: 5rem;
}

.diagonal {
  z-index: 1; 
  --skew-angle: -5deg;
  --background: linear-gradient( 45deg, #CBA591, #CBA591,#FFEFCB);

  position: relative;
  isolation: isolate;
}

.diagonal::after {
  content: '';
  background: var(--background);
  position: absolute;
  z-index: -1;
  inset: 0;
  transform: skewY(var(--skew-angle));
}

.image_text_container {
  display: flex;
  align-items: center;
  justify-content: center
}

img {
  max-width: 100%;
  max-height: 100%;
  width: 15em;
  height: 15em;

}

.image_horizontal img {
  max-width: 100%;
  max-height: 100%;
  width: 15em;
  height: 15em;
  margin-left: 1em;
  border-radius: 15%;
  border: 0.5em solid #CBA591;
}

.text_horizontal {
  font-size: 20px;
  padding-left: 20px;
  max-width:500px;
}

.section-title {
  width: 300px;
  height: 40px;
  position: relative;
  background: #8f3639;
  color: #FFEFCB;
  font-size: 2.25rem;
}

.section-title:before {
  content: "";
  position: absolute;
  right: -20px;
  bottom: 0;
  width: 0;
  height: 0;
  border-left: 20px solid #8f3639;
  border-top: 20px solid transparent;
  border-bottom: 20px solid transparent;
}
  
footer p {
  background-color: #8f3639;
  width: 100%;
  color: #FFEFCB;
  font-size: 1em;
}

footer {
  overflow: hidden;
  background-color: #8f3639;
  width: 100%;
}

#gelato_B {
  z-index: -5; 
  margin-top: 0px;
  display: block;
  margin-left: 0%;
  margin-right: 0%;
  width: 50%;
  height: 50%;
  position: absolute;

}

#gelato_B_element {
  --skew-angle: -5deg;
  --background: linear-gradient( 45deg, #FFEFCB, #FFEFCB,#FFEFCB);
  margin-top: 230px;
  display: block;
  margin-left: 0%;
  margin-right: 0%;
  width: 50%;
  height: 1%;
  position: absolute;
  isolation: isolate;
  z-index: -4; 

}

#gelato_B_element::after {
  content: '';
  background: var(--background);
  position: absolute;
  z-index: -4;
  inset: 0;
  transform: skewY(var(--skew-angle));
}

#mission {
  display: block;
  margin-left: 50%;
  margin-right: 0%;
  margin-top: -130px;
}

#menu_A_img {
  z-index: -3; 

  width: 40%;
  height: 40%;
  padding-left: -100px;

}

#menu_B_img {
  z-index: -3; 

  width: 40%;
  height: 40%;

}

.box {
  clip-path: polygon(0 0, 100% 21%, 100% 100%, 0 82%);
}

.diagonal_B {
  z-index: -4; 
  --skew-angle: 7deg;
  --background: linear-gradient( 100deg, #CBA591, #FFEFCB,#FFEFCB, #FFEFCB);
  position: absolute;
  isolation: isolate;
  margin-top: 200px;
  margin-left: 900;
  width: 50%;
}

.diagonal_B::after {
  content: '';
  background: var(--background);
  position: absolute;
  z-index: -4;
  inset: 0;
  transform: skewY(var(--skew-angle));
}

.diagonal_C {
  z-index: -4; 
  --skew-angle: 7deg;
  --background: linear-gradient( 100deg, #FFEFCB, #FFEFCB, #FFEFCB);
  position: absolute;
  isolation: isolate;
  margin-top: 900px;
  margin-right: -1000px;
  margin-left: 1000px;
  width: 50%;
}

.diagonal_C::after {
  content: '';
  background: var(--background);
  position: absolute;
  z-index: -4;
  inset: 0;
  transform: skewY(var(--skew-angle));
}

.menu {
  margin: 0 auto;
  background-color: #FFEFCB;
  width: 1000px;
  padding-top: 50px;
  padding-bottom: 50px;
  /*box-shadow: 0px 5px 9px 3px rgba(83, 7, 7, 0.63);*/
  text-align:center
}

.menu p {
  margin:auto;
  all: initial;
  font-size: 35px;
  color: hsl(23, 33%, 28%);
  max-width:1300px;
  word-wrap:normal;

}

